fixes spacing style issues on front page at mobile

--- a/themes/stepup4earth-theme/sass/_page-templates.scss
+++ b/themes/stepup4earth-theme/sass/_page-templates.scss
@@ -61,10 +61,10 @@ Front Page
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	grid-gap: 0;
-	grid-template-rows: 7vh 12vh 25vh 35vh 45vh 10vh;
+	grid-template-rows: 7vh 12vh 25vh 35vh 40vh 10vh;
 	justify-self: right;
 	padding-top: 6rem;
-	padding-bottom: 3.8rem;
+	padding-bottom: 2.5rem;
 	width: 95%;
 	margin: 0 auto;
 	position: relative;
@@ -114,7 +114,6 @@ Front Page
 			background-position: right;
 			// height: 351px;
 			width: 100%;
-			margin: 1rem 0rem 3rem 0rem;
 			z-index: 1;
 
 			@include tablet {
@@ -155,7 +154,7 @@ Front Page
 	.light-green-bkgrd {
 		background-color: $color__background-green;
 		width: 100%;
-		height: 1162px;
+		height: 1100px;
 		grid-column: 3 / 4;
 		grid-row: 1 / 6;
 		position: absolute;
@@ -175,6 +174,71 @@ Front Page
 			top: -207px;
 		}
 	}
+	.sqr-orange {
+		grid-column: 1 / 2;
+		grid-row: 1 / 2;
+		justify-self: right;
+		height: 6vh;
+		width: 6vh;
+		background-color: $color__orange-1;
+		margin-right: 1rem;
+		z-index: 1;
+	
+		@include tablet {
+			display: none;
+		}  
+	
+		@include desktop {
+			display: grid;
+			grid-column: 19 / 20;
+			z-index: 2;
+			margin-right: 0rem;
+			justify-self: left;
+			}  
+	}
+
+	.sqr-dr-green {
+		grid-column: 1 / 2;
+		grid-row: 2 / 3;
+		justify-self: right;
+		align-self: flex-start;
+		height: 11vh;
+		width: 11vh;
+		background-color: $color__green-1;
+		margin-right: 1rem;
+	
+		@include tablet {
+			grid-column: 3 / 5;
+			grid-row: 1 / 2;
+			margin: 0rem 0rem 0rem 1rem;
+			height: 8.125rem;
+			width: 8.125rem;
+		}
+	
+		@include desktop {
+			height: 176px;
+			width: 176px;
+		}  
+	}
+	.sqr-light-green {
+		grid-column: 1 / 2;
+		grid-row: 3 / 4;
+		justify-self: right;
+		align-self: flex-start;
+		height: 6vh;
+		width: 6vh;
+		background-color: $color__green-light-1;
+		margin-right: 1rem;
+	
+	   @include tablet {
+		margin-right: 0rem;
+	  }  
+	
+	  @include desktop {
+		grid-column: 2 / 3;
+		grid-row: 1 / 2;
+		}
+	}  
 }
 
 .banner-widgets-front {
@@ -248,9 +312,9 @@ Front Page
 
 .ecofair-banner-grid {
 	display: grid;
-	grid-template-columns: repeat(3, 1fr);
+	grid-template-columns: 0.3fr 1fr 0.3fr 1fr 1fr 1fr;
 	grid-gap: 0;
-	grid-template-rows: 7vh 12vh 25vh 44vh 45vh;
+	grid-template-rows: 20vh 20vh 12vh 44vh 45vh;
 	justify-self: right;
 	padding-top: 5rem;
 	padding-bottom: 3.8rem;
@@ -274,151 +338,92 @@ Front Page
 		padding-bottom: 0rem;
 		margin: 0 auto;
 		}
-}
 
-.front-banner-img {
-	background-image: url(../assets/images/heroimage01.jpeg);
-	background-size: cover;
-	background-position: right;
-	grid-column: 2 / 4;
-	grid-row: 1 / 4;
-	width: 100%;
-	z-index: 2;
+		.front-banner-img {
+			background-image: url(../assets/images/heroimage01.jpeg);
+			background-size: cover;
+			background-position: right;
+			grid-column: 1 / 7;
+			grid-row: 1 / 3;
+			width: 100%;
+			z-index: 2;
+		
+			@include tablet {
+				grid-column: 1 / 5;
+				grid-row: 2 / 4;
+			}  
+		
+			@include desktop {
+				grid-column: 1 / 5;
+				grid-row: 2 / 4;
+			}  
+		}
 
-	@include tablet {
-		grid-column: 1 / 5;
-		grid-row: 2 / 4;
-	}  
+		.sqr-orange {
+			grid-column: 3 / 4;
+			grid-row: 3 / 4;
+			justify-self: right;
+			height: 6vh;
+			width: 6vh;
+			background-color: $color__orange-1;
+			margin-right: 1rem;
+			z-index: 1;
+		
+			@include tablet {
+				display: none;
+			}  
+		
+			@include desktop {
+				display: grid;
+				grid-column: 19 / 20;
+				z-index: 2;
+				margin-right: 0rem;
+				justify-self: left;
+				}  
+		}
 
-	@include desktop {
-		grid-column: 1 / 5;
-		grid-row: 2 / 4;
-	}  
-}
-
-.sqr-orange {
-	grid-column: 1 / 2;
-	grid-row: 3 / 4;
-	justify-self: right;
-	height: 6vh;
-	width: 6vh;
-	background-color: $color__orange-1;
-	margin-right: 1rem;
-
-	@include tablet {
-		display: none;
-	}  
-
-	@include desktop {
-		display: grid;
-		grid-column: 19 / 20;
-		z-index: 2;
-		margin-right: 0rem;
-		justify-self: left;
+		.sqr-dr-green {
+			grid-column: 2 / 3;
+			grid-row: 3 / 4;
+			justify-self: right;
+			align-self: flex-start;
+			height: 11vh;
+			width: 11vh;
+			background-color: $color__green-1;
+			margin-right: 1rem;
+		
+			@include tablet {
+				grid-column: 3 / 5;
+				grid-row: 1 / 2;
+				margin: 0rem 0rem 0rem 1rem;
+				height: 8.125rem;
+				width: 8.125rem;
+			}
+		
+			@include desktop {
+				height: 176px;
+				width: 176px;
+			}  
+		}
+		.sqr-light-green {
+			grid-column: 1 / 2;
+			grid-row: 3 / 4;
+			justify-self: right;
+			align-self: flex-start;
+			height: 6vh;
+			width: 6vh;
+			background-color: $color__green-light-1;
+			margin-right: 1rem;
+		
+		   @include tablet {
+			margin-right: 0rem;
+		  }  
+		
+		  @include desktop {
+			grid-column: 2 / 3;
+			grid-row: 1 / 2;
+			}
 		}  
-}
-
-.sqr-dr-green {
-	grid-column: 1 / 2;
-	grid-row: 2 / 3;
-	justify-self: right;
-	align-self: flex-start;
-	height: 11vh;
-	width: 11vh;
-	background-color: $color__green-1;
-	margin-right: 1rem;
-
-	@include tablet {
-		grid-column: 3 / 5;
-		grid-row: 1 / 2;
-		margin: 0rem 0rem 0rem 1rem;
-		height: 8.125rem;
-		width: 8.125rem;
-	}
-
-	@include desktop {
-		height: 176px;
-		width: 176px;
-	}  
-}
-
-.sqr-light-green {
-	grid-column: 1 / 2;
-	grid-row: 1 / 2;
-	justify-self: right;
-	align-self: flex-start;
-	height: 6vh;
-	width: 6vh;
-	background-color: $color__green-light-1;
-	margin-right: 1rem;
-
-   @include tablet {
-	margin-right: 0rem;
-  }  
-
-  @include desktop {
-	grid-column: 2 / 3;
-	grid-row: 1 / 2;
-    }  
-}
-
-.event-info {
-	grid-column: 1 / 4;
-	grid-row: 4 / 5;
-	padding: 0.5rem 0rem 0.5rem 0rem;
-	z-index: 2;
-	width: 100%;
-
-  @include tablet {
-	grid-column: 5 / 9;
-	grid-row: 2 / 4;
-	position: relative;
-  }
-
-  .site-title-heading {
-	font-size: 1rem;
-	margin: 0.5rem 0rem 0.5rem 0rem;
-  }
-
-  .event-title {
-	font-size: 4.5rem;
-	margin: 0.5rem 0rem 0.5rem 0rem;
-	line-height: 1.2;
-
-	@include tablet {
-	 width: 30%;
-	}
-	@include desktop {
-		font-size: 3.5rem;
-	}
-    }
-	
-	.location {
-	margin-bottom: 0px;
-
-	@include desktop {
-	    margin-top: 3rem;
-	}
-    }
-}
-
-.event-info-li {
-    border-bottom: $line_green;
-    width: 55%;
-
-    @include tablet {
-	width: 28rem;
-    }
-
-    @include desktop {
-	width: 47rem;
-	position: absolute;
-	top: 205px;
-	left: 0px;
-	z-index: 5;
-    }
-}
-
 
 .hero-img-2 {
     grid-column: 1 / 4;
@@ -549,6 +554,65 @@ Front Page
 		border-radius: 1px;
 		margin-bottom: 10px;
     } 
+}
+		
+}
+
+.event-info {
+	grid-column: 1 / 7;
+	grid-row: 4 / 5;
+	padding: 0.5rem 0rem 0.5rem 0rem;
+	z-index: 2;
+	width: 100%;
+
+  @include tablet {
+	grid-column: 5 / 9;
+	grid-row: 2 / 4;
+	position: relative;
+  }
+
+  .site-title-heading {
+	font-size: 1rem;
+	margin: 0.5rem 0rem 0.5rem 0rem;
+  }
+
+  .event-title {
+	font-size: 4.5rem;
+	margin: 0.5rem 0rem 0.5rem 0rem;
+	line-height: 1.2;
+
+	@include tablet {
+	 width: 30%;
+	}
+	@include desktop {
+		font-size: 3.5rem;
+	}
+    }
+	
+	.location {
+	margin-bottom: 0px;
+
+	@include desktop {
+	    margin-top: 3rem;
+	}
+    }
+}
+
+.event-info-li {
+    border-bottom: $line_green;
+    width: 55%;
+
+    @include tablet {
+	width: 28rem;
+    }
+
+    @include desktop {
+	width: 47rem;
+	position: absolute;
+	top: 205px;
+	left: 0px;
+	z-index: 5;
+    }
 }
 
 // mission statement section
